@@ -9,6 +9,12 @@ What's New in Python 2.7.4
 Core and Builtins
 -----------------
 
+- Issue #11603 (again): Setting __repr__ to __str__ now raises a RuntimeError
+  when repr() or str() is called on such an object.
+
+- Issue #14658: Fix binding a special method to a builtin implementation of a
+  special method with a different name.
+
 - Issue #14612: Fix jumping around with blocks by setting f_lineno.
 
 - Issue #13889: Check and (if necessary) set FPU control word before calling
